<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingStart="40dp"
        android:paddingRight="40dp"
        android:paddingEnd="40dp"
        >


        <ImageView
            android:layout_width="@dimen/logo_w_h"
            android:layout_height="@dimen/logo_w_h"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/lbl_forgot_password"
            android:textColor="@android:color/white"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:padding="@dimen/spacing_normal"
            android:text="@string/reset_password_info"
            android:textColor="@android:color/white"
            android:textSize="14dp" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_marginTop="20dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:indeterminateTint="@android:color/white"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="20dp"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|left"
            android:text="@string/hint_email"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/transperant_round_rect"
            android:padding="10dp"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <!-- Reset Button -->

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_reset_password"
            android:background="@drawable/round_rect"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/btn_reset_password"
            android:textColor="@color/colorPrimaryDark"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:text="@string/btn_back"
            android:textColor="@android:color/white" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
