<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="@dimen/spacing_extra"
    android:background="@color/color_master_light">

        <LinearLayout
            android:id="@+id/titleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/spacing_normal"
            app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:layout_marginStart="@dimen/spacing_extra"
                    android:layout_marginEnd="@dimen/spacing_extra"
                    android:textSize="@dimen/app_text_size_x_large"
                    android:layout_gravity="bottom"
                    android:text="@string/all_requests" />
                <ImageView
                    android:id="@+id/btnLogout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_lock_power_off"
                    android:paddingVertical="@dimen/spacing_tiny"
                    android:paddingHorizontal="@dimen/spacing_normal"/>
        </LinearLayout>


<FrameLayout
    app:layout_constraintTop_toBottomOf="@+id/titleLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/spacing_tiny"
    tools:context=".ui.bookings.BookingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/booking_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/spacing_normal"
            tools:listitem="@layout/item_booking"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:indeterminate="true"
            android:visibility="gone"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/issueNewTicketFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:contentDescription="@string/request_new_ticket"
        android:text="@string/new_ticket"
        android:paddingVertical="@dimen/spacing_tiny"
        android:paddingHorizontal="@dimen/spacing_normal"
        android:textColor="@color/color_master_light"
        android:gravity="center_vertical"
        android:backgroundTint="@color/colorPrimary"
        app:icon="@drawable/ic_plus"
        app:iconTint="@color/color_master_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/spacing_normal"/>
</androidx.constraintlayout.widget.ConstraintLayout>